Fixing spacing between internal breadcrumb items

--- a/app/components/collection-breadcrumb/collection-breadcrumb.component.scss
+++ b/app/components/collection-breadcrumb/collection-breadcrumb.component.scss
@@ -2,7 +2,6 @@
 @import "app/styles/dimensions";
 
 .sep {
-  padding-left: 5px;
   padding-right: 5px;
   color: #999;
 }
